tests/typechecking/invalid/print.ml
print_int 123;
print_int (-456);
789+0
